--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -13,7 +13,7 @@
 
         <!-- You can turn off the avatar in _config.yml by setting to false -->
         {% if site.resume_avatar == 'true' %}
-        <img src="images/avatar.jpg" alt="my photo" class="avatar no-print" itemprop="image">
+        <img src="images/vijay_alagappan.jpg" alt="my photo" class="avatar no-print" itemprop="image">
         {% endif %}
 
         <!-- Your name is defined in the _config.yml file -->
@@ -232,7 +232,7 @@
       {% endif %}
 
       <footer class="page-footer">
-        <p class="footer-line">Resume template borrowed from <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>
+        <p class="footer-line">Resume template borrowed from <a href="https://github.com/jglovier/resume-template">jglovier</a>.</p>
       </footer>
 
     </div>
